[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.1", features = ["derive"] }
colorous = "1.0.8"
hound = "3.5.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
plotters = "0.3.4"
png = "0.17.6"
rustfft = "6.0.1"
sonogram = { version = "0.7.0", features = ["png"] }
wav = "1.0.0"
