[package]
name = "atlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bincode = "1.3.3"
clap = { version = "3.1", features = ["derive"] }
colorous = "1.0.8"
hound = "3.5.0"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-stats = "0.5.1"
plotters = "0.3.4"
rusqlite = "0.28.0"
rustfft = "6.0.1"
serde = { version = "1.0.145", features = ["derive"] }
